--- a/Shared/packages.config
+++ b/Shared/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FAB.Forms" version="2.1.1" targetFramework="portable45-net45+wp8" />
   <package id="JPC.BindablePicker" version="1.0.0" targetFramework="portable45-net45+wp8" />
-  <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+wp8" />
+  <package id="Xamarin.Forms" version="2.3.5.84-nightly" targetFramework="portable45-net45+wp8" />
 </packages>
