--- a/RangeUpApp/RangeUpApp.iOS/packages.config
+++ b/RangeUpApp/RangeUpApp.iOS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FAB.Forms" version="2.1.1" targetFramework="xamarinios10" />
+  <package id="FAB.Forms" version="2.2.0-pre1" targetFramework="xamarinios10" />
+  <package id="FreshEssentials" version="2.1.3" targetFramework="xamarinios10" />
   <package id="JPC.BindablePicker" version="1.0.0" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
@@ -25,7 +26,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
@@ -54,5 +55,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.5.84-nightly" targetFramework="xamarinios10" />
 </packages>
